Quorum/Library/Tests/Actions/Pass/NonParallelNestedReturn.quorum
class Main
    action Main
        i = 1
        repeat 4 times
            bar(foo(i))
            i = i + 1
        end
    end

    action foo (integer a) returns text
        if a = 1
            return "Spring"
        elseif a = 2
            return "Summer"
        elseif a = 3
            return "Fall"
        else

        end
        return "Winter"
    end

    action bar(text t)
        output t
    end
end