Quorum/Library/Tests/Actions/Fail/MissingReturn2.quorum
class Main
    action Main
        output foo(1)
    end

    action foo (integer a) returns text
        if a = 1
            return "Spring"
        elseif a = 2
            return "Summer"
        elseif a = 3
            return "Fall"
        else

        end
    end
end